--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="text">
     </header>
     <main class="wrapper"></main>
-    <script src="../src/app.js"></script>
+    <script src="./src/app.js"></script>
 </body>
 
 </html>
